--- a/src/app/modules/admin/admin-dashboard/staff-user-list/staff-user-list.component.html
+++ b/src/app/modules/admin/admin-dashboard/staff-user-list/staff-user-list.component.html
@@ -18,7 +18,7 @@
             styleClass="w-full"
           ></p-dropdown>
         </div>
-        <button type="submit" class="p-button p-button-danger p-button-lg">Submit</button>
+        <button type="submit" class="p-button p-button-danger p-button-lg">Search</button>
       </form>
     </div>
     <div class="p-toolbar-group-right">
