--- a/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
+++ b/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
@@ -2,16 +2,6 @@
   <div class="flex flex-column gap-4 p-2" style="width: 700px">
     <p-card>
       <div class="flex flex-column gap-5">
-        <div class="flex gap-3" *ngIf="detail">
-          <p-floatLabel>
-            <input pInputText id="patientId" formControlName="patientId" autocomplete="off" readonly/>
-            <label for="patientId">Patient ID</label>
-          </p-floatLabel>
-          <p-floatLabel>
-            <input pInputText id="createdAt" formControlName="createdAt" autocomplete="off" readonly/>
-            <label for="createdAt">Registration Time</label>
-          </p-floatLabel>
-        </div>
         <div class="flex gap-3">
           <p-floatLabel>
             <input pInputText id="firstName" formControlName="firstName" autocomplete="off"/>
@@ -21,52 +11,58 @@
             <input pInputText id="lastName" formControlName="lastName" autocomplete="off"/>
             <label for="lastName">Last Name</label>
           </p-floatLabel>
+            <p-floatLabel>
+                <input pInputText id="email" formControlName="email" autocomplete="off"/>
+                <label for="email">Email</label>
+            </p-floatLabel>
+            <p-floatLabel>
+                <input pInputText id="username" formControlName="username" autocomplete="off"/>
+                <label for="username">Username</label>
+            </p-floatLabel>
         </div>
-        <div class="flex gap-3">
-          <p-floatLabel>
-            <p-calendar id="dateOfBirth" formControlName="dateOfBirth" dateFormat="yy-mm-dd"></p-calendar>
-            <label for="dateOfBirth">Date of Birth</label>
-          </p-floatLabel>
-          <p-floatLabel>
-            <p-dropdown id="Gender" formControlName="gender" [options]="genderOptions" optionLabel="label"
-                        optionValue="value"/>
-            <label for="Gender">Gender</label>
-          </p-floatLabel>
-        </div>
-        <div class="flex gap-3">
-          <p-floatLabel>
-            <input pInputText id="email" formControlName="email" autocomplete="off"/>
-            <label for="email">Email</label>
-          </p-floatLabel>
-          <p-floatLabel>
-            <input pInputText id="contactNumber" formControlName="contactNumber" autocomplete="off"/>
-            <label for="contactNumber">Contact Number</label>
-          </p-floatLabel>
-        </div>
-        <div class="flex gap-3">
-          <p-floatLabel>
-            <input pInputText id="emergencyContactName" formControlName="emergencyContactName" autocomplete="off"/>
-            <label for="emergencyContactName">Emergency Contact Name</label>
-          </p-floatLabel>
-          <p-floatLabel>
-            <input pInputText id="emergencyContactNumber" formControlName="emergencyContactNumber" autocomplete="off"/>
-            <label for="emergencyContactNumber">Emergency Contact Number</label>
-          </p-floatLabel>
-        </div>
-        <p-floatLabel class="w-full">
-          <input pInputText id="address" formControlName="address" autocomplete="off"/>
-          <label for="address">Address</label>
-        </p-floatLabel>
-        <div class="flex gap-3">
-          <p-floatLabel>
-            <input pInputText id="insuranceProvider" formControlName="insuranceProvider" autocomplete="off"/>
-            <label for="insuranceProvider">Insurance Provider</label>
-          </p-floatLabel>
-          <p-floatLabel>
-            <input pInputText id="insurancePolicyNumber" formControlName="insurancePolicyNumber" autocomplete="off"/>
-            <label for="insurancePolicyNumber">Insurance Policy Number</label>
-          </p-floatLabel>
+        <div formGroupName="patientInfo">
+            <div class="flex gap-3">
+              <p-floatLabel>
+                <p-calendar id="dateOfBirth" formControlName="dateOfBirth" dateFormat="yy-mm-dd"></p-calendar>
+                <label for="dateOfBirth">Date of Birth</label>
+              </p-floatLabel>
+              <p-floatLabel>
+                <p-dropdown id="Gender" formControlName="gender" [options]="genderOptions" optionLabel="label"
+                            optionValue="value"/>
+                <label for="Gender">Gender</label>
+              </p-floatLabel>
+            </div>
+            <div class="flex gap-3">
+              <p-floatLabel>
+                <input pInputText id="contactNumber" formControlName="contactNumber" autocomplete="off"/>
+                <label for="contactNumber">Contact Number</label>
+              </p-floatLabel>
+            </div>
+            <div class="flex gap-3">
+              <p-floatLabel>
+                <input pInputText id="emergencyContactName" formControlName="emergencyContactName" autocomplete="off"/>
+                <label for="emergencyContactName">Emergency Contact Name</label>
+              </p-floatLabel>
+              <p-floatLabel>
+                <input pInputText id="emergencyContactNumber" formControlName="emergencyContactNumber" autocomplete="off"/>
+                <label for="emergencyContactNumber">Emergency Contact Number</label>
+              </p-floatLabel>
+            </div>
+            <p-floatLabel class="w-full">
+              <input pInputText id="address" formControlName="address" autocomplete="off"/>
+              <label for="address">Address</label>
+            </p-floatLabel>
+            <div class="flex gap-3">
+              <p-floatLabel>
+                <input pInputText id="insuranceProvider" formControlName="insuranceProvider" autocomplete="off"/>
+                <label for="insuranceProvider">Insurance Provider</label>
+              </p-floatLabel>
+              <p-floatLabel>
+                <input pInputText id="insurancePolicyNumber" formControlName="insurancePolicyNumber" autocomplete="off"/>
+                <label for="insurancePolicyNumber">Insurance Policy Number</label>
+              </p-floatLabel>
 
+            </div>
         </div>
         <p-button
           *ngIf="!detail"
