--- a/src/app/shared/component/user-list/patient-user-list/patient-user-list.component.html
+++ b/src/app/shared/component/user-list/patient-user-list/patient-user-list.component.html
@@ -21,13 +21,13 @@
                 <button type="submit" class="p-button p-button-danger p-button-lg">Search</button>
             </form>
         </div>
-        <div class="p-toolbar-group-right">
-            @if (this.authUserService.getType() === UserTypeEnums.ADMIN) {
-                <button pButton type="button" routerLink="/{{this.authUserService.getType()}}/new-user/patient" class="p-button p-button-success p-button-lg">Add user</button>
-            } @else {
-                <button pButton type="button" routerLink="/{{this.authUserService.getRole()?.toLowerCase()}}/new-user/patient" class="p-button p-button-success p-button-lg">Add user</button>
-            }
-        </div>
+<!--        <div class="p-toolbar-group-right">-->
+<!--            @if (this.authUserService.getType() === UserTypeEnums.ADMIN) {-->
+<!--                <button pButton type="button" routerLink="/{{this.authUserService.getType()}}/new-user/patient" class="p-button p-button-success p-button-lg">Add user</button>-->
+<!--            } @else {-->
+<!--                <button pButton type="button" routerLink="/{{this.authUserService.getRole()?.toLowerCase()}}/new-user/patient" class="p-button p-button-success p-button-lg">Add user</button>-->
+<!--            }-->
+<!--        </div>-->
     </p-toolbar>
 
 <p-table
