fix style and some logic in app

--- a/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
+++ b/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
@@ -1,7 +1,5 @@
-<app-dynamic-navbar [navItems]="navItems"/>
-<button routerLink="/secretary/dashboard/patient/list">Show patients</button>
-<app-logout />
-<router-outlet />
+<app-dynamic-navbar [navItems]="navItems" />
+<app-spinner-loader [visible]="loading"></app-spinner-loader>
 <p-card header="Patient triage status">
   <div class="card">
     <p-table
