--- a/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
+++ b/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
@@ -1,69 +1,77 @@
+<app-spinner-loader [visible]="loading"></app-spinner-loader>
 <form [formGroup]="patientForm" (ngSubmit)="onSubmit()">
-  <div class="flex flex-column gap-4 p-2" style="width: 700px">
+  <div class="flex flex-column gap-4 p-4" style="max-width: 700px; margin: auto;">
     <p-card>
       <div class="flex flex-column gap-5">
-        <div class="flex gap-3">
-          <p-floatLabel>
-            <input pInputText id="firstName" formControlName="firstName" autocomplete="off"/>
+        <!-- Personal Information -->
+        <div class="flex flex-wrap gap-4">
+          <p-floatLabel class="w-full md:w-5 mr-2">
+            <input pInputText id="firstName" formControlName="firstName" autocomplete="off" />
             <label for="firstName">First Name</label>
           </p-floatLabel>
-          <p-floatLabel>
-            <input pInputText id="lastName" formControlName="lastName" autocomplete="off"/>
+          <p-floatLabel class="w-full md:w-5">
+            <input pInputText id="lastName" formControlName="lastName" autocomplete="off" />
             <label for="lastName">Last Name</label>
           </p-floatLabel>
-            <p-floatLabel>
-                <input pInputText id="email" formControlName="email" autocomplete="off"/>
-                <label for="email">Email</label>
-            </p-floatLabel>
-            <p-floatLabel>
-                <input pInputText id="username" formControlName="username" autocomplete="off"/>
-                <label for="username">Username</label>
-            </p-floatLabel>
+          <p-floatLabel class="w-full md:w-5">
+            <input pInputText id="email" formControlName="email" autocomplete="off" />
+            <label for="email">Email</label>
+          </p-floatLabel>
+          <p-floatLabel class="w-full md:w-5">
+            <input pInputText id="username" formControlName="username" autocomplete="off" />
+            <label for="username">Username</label>
+          </p-floatLabel>
         </div>
-        <div formGroupName="patientInfo">
-            <div class="flex gap-3">
-              <p-floatLabel>
-                <p-calendar id="dateOfBirth" formControlName="dateOfBirth" dateFormat="yy-mm-dd"></p-calendar>
-                <label for="dateOfBirth">Date of Birth</label>
-              </p-floatLabel>
-              <p-floatLabel>
-                <p-dropdown id="Gender" formControlName="gender" [options]="genderOptions" optionLabel="label"
-                            optionValue="value"/>
-                <label for="Gender">Gender</label>
-              </p-floatLabel>
-            </div>
-            <div class="flex gap-3">
-              <p-floatLabel>
-                <input pInputText id="contactNumber" formControlName="contactNumber" autocomplete="off"/>
-                <label for="contactNumber">Contact Number</label>
-              </p-floatLabel>
-            </div>
-            <div class="flex gap-3">
-              <p-floatLabel>
-                <input pInputText id="emergencyContactName" formControlName="emergencyContactName" autocomplete="off"/>
-                <label for="emergencyContactName">Emergency Contact Name</label>
-              </p-floatLabel>
-              <p-floatLabel>
-                <input pInputText id="emergencyContactNumber" formControlName="emergencyContactNumber" autocomplete="off"/>
-                <label for="emergencyContactNumber">Emergency Contact Number</label>
-              </p-floatLabel>
-            </div>
-            <p-floatLabel class="w-full">
-              <input pInputText id="address" formControlName="address" autocomplete="off"/>
-              <label for="address">Address</label>
-            </p-floatLabel>
-            <div class="flex gap-3">
-              <p-floatLabel>
-                <input pInputText id="insuranceProvider" formControlName="insuranceProvider" autocomplete="off"/>
-                <label for="insuranceProvider">Insurance Provider</label>
-              </p-floatLabel>
-              <p-floatLabel>
-                <input pInputText id="insurancePolicyNumber" formControlName="insurancePolicyNumber" autocomplete="off"/>
-                <label for="insurancePolicyNumber">Insurance Policy Number</label>
-              </p-floatLabel>
 
-            </div>
+        <!-- Patient Info -->
+        <div formGroupName="patientInfo" class="flex flex-column gap-4">
+          <div class="flex flex-wrap gap-4">
+            <p-floatLabel class="w-full md:w-5">
+              <p-calendar id="dateOfBirth" formControlName="dateOfBirth" dateFormat="yy-mm-dd"></p-calendar>
+              <label for="dateOfBirth">Date of Birth</label>
+            </p-floatLabel>
+            <p-floatLabel class="w-full md:w-5">
+              <p-dropdown id="Gender" formControlName="gender" [options]="genderOptions" optionLabel="label" optionValue="value"></p-dropdown>
+              <label for="Gender">Gender</label>
+            </p-floatLabel>
+          </div>
+
+          <div class="flex flex-wrap gap-4">
+            <p-floatLabel class="w-full md:w-5">
+              <input pInputText id="contactNumber" formControlName="contactNumber" autocomplete="off" />
+              <label for="contactNumber">Contact Number</label>
+            </p-floatLabel>
+          </div>
+
+          <div class="flex flex-wrap gap-4">
+            <p-floatLabel class="w-full md:w-5">
+              <input pInputText id="emergencyContactName" formControlName="emergencyContactName" autocomplete="off" />
+              <label for="emergencyContactName">Emergency Contact Name</label>
+            </p-floatLabel>
+            <p-floatLabel class="w-full md:w-5">
+              <input pInputText id="emergencyContactNumber" formControlName="emergencyContactNumber" autocomplete="off" />
+              <label for="emergencyContactNumber">Emergency Contact Number</label>
+            </p-floatLabel>
+          </div>
+
+          <p-floatLabel class="w-full">
+            <input pInputText id="address" formControlName="address" autocomplete="off" />
+            <label for="address">Address</label>
+          </p-floatLabel>
+
+          <div class="flex flex-wrap gap-4">
+            <p-floatLabel class="w-full md:w-5">
+              <input pInputText id="insuranceProvider" formControlName="insuranceProvider" autocomplete="off" />
+              <label for="insuranceProvider">Insurance Provider</label>
+            </p-floatLabel>
+            <p-floatLabel class="w-full md:w-5">
+              <input pInputText id="insurancePolicyNumber" formControlName="insurancePolicyNumber" autocomplete="off" />
+              <label for="insurancePolicyNumber">Insurance Policy Number</label>
+            </p-floatLabel>
+          </div>
         </div>
+
+        <!-- Buttons -->
         <p-button
           *ngIf="!detail"
           label="Registration"
@@ -71,7 +79,8 @@
           type="submit"
           (onClick)="onRegistration()"
           [disabled]="!patientForm.valid"
-          styleClass="w-full"/>
+          styleClass="w-full mt-3"
+        />
         <p-button
           *ngIf="detail"
           label="Update"
@@ -79,7 +88,8 @@
           type="submit"
           (onClick)="onSubmit()"
           [disabled]="!patientForm.valid"
-          styleClass="w-full"/>
+          styleClass="w-full mt-3"
+        />
       </div>
     </p-card>
   </div>
