secretary change password of patient

--- a/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
+++ b/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
@@ -78,6 +78,13 @@
               class="pl-3"
               (click)="updateTriage(rowData)"
             />
+            <p-button
+                label="Change password"
+                icon="pi pi-info-circle"
+                severity="help"
+                class="pl-3"
+                (click)="changePassword(rowData)"
+            />
           </td>
         </tr>
       </ng-template>
