--- a/src/app/modules/doctor/doctor-detail-patient/doctor-detail-patient.component.html
+++ b/src/app/modules/doctor/doctor-detail-patient/doctor-detail-patient.component.html
@@ -1,3 +1,135 @@
-<p-card>
-    
-</p-card>
+<app-spinner-loader [visible]="loading"></app-spinner-loader>
+<app-dynamic-navbar></app-dynamic-navbar>
+<p-card header="Patient Emergency Info" styleClass="p-mb-4">
+    <div class="grid p-3">
+      <!-- First Name -->
+      <div class="col-6 flex align-items-center">
+        <label class="font-bold w-8rem">First Name:</label>
+        <span>{{ patient.firstName }}</span>
+      </div>
+  
+      <!-- Last Name -->
+      <div class="col-6 flex align-items-center">
+        <label class="font-bold w-8rem">Last Name:</label>
+        <span>{{ patient.lastName }}</span>
+      </div>
+  
+      <!-- Patient ID -->
+      <div class="col-6 flex align-items-center">
+        <label class="font-bold w-8rem">Patient ID:</label>
+        <span>{{ patient.patientId }}</span>
+      </div>
+  
+      <!-- Status -->
+      <div class="col-6 flex align-items-center">
+        <label class="font-bold w-8rem">Status:</label>
+        <span>{{ patient.patientStatus }}</span>
+      </div>
+  
+      <!-- Priority Level -->
+      <div class="col-6 flex align-items-center">
+        <label class="font-bold w-8rem">Priority Level:</label>
+        <span>{{ patient.priorityLevel }}</span>
+      </div>
+  
+      <!-- Triage Notes -->
+      <div class="col-6 flex align-items-center">
+        <label class="font-bold w-8rem">Triage Notes:</label>
+        <span>{{ patient.triageNotes }}</span>
+      </div>
+  
+      <!-- Admission Timestamp -->
+      <div class="col-6 flex align-items-center">
+        <label class="font-bold w-8rem">Admission Time:</label>
+        <span>{{ patient.admissionTimestamp }}</span>
+      </div>
+    </div>
+  </p-card>
+  <p-card header="Patient Medical Procedures">
+    <button pButton type="button" label="Add New Procedure" icon="pi pi-plus" (click)="openAddProcedureDialog()"></button>
+    <p-table 
+      [value]="patientMedicalProcedures" 
+      [paginator]="true" 
+      [rows]="5" 
+      [rowsPerPageOptions]="[5, 10, 20]" 
+      styleClass="p-datatable-striped"
+      responsiveLayout="scroll">
+      
+      <!-- Table Header -->
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Procedure Name</th>
+          <th>Timestamp</th>
+          <th>Description</th>
+          <th>Cost</th>
+          <th>Staff</th>
+          <th>Emergency Visit ID</th>
+        </tr>
+      </ng-template>
+  
+      <!-- Table Body -->
+      <ng-template pTemplate="body" let-procedure>
+        <tr>
+          <td>{{ procedure.procedureName }}</td>
+          <td>{{ procedure.procedureTimestamp }}</td>
+          <td>{{ procedure.description }}</td>
+          <td>{{ procedure.procedureCost | currency }}</td>
+          <td>{{ procedure.staff.firstName }} {{ procedure.staff.lastName }}</td>
+          <td>{{ procedure.emergencyVisit.id }}</td>
+        </tr>
+      </ng-template>
+  
+      <!-- Empty Message -->
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="7">No medical procedures found.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </p-card>
+
+  <p-card header="Patient Vitals">
+    <button pButton type="button" label="Add New Vital" icon="pi pi-plus" (click)="openAddVitalDialog()"></button>
+    <p-table 
+      [value]="patientVitals" 
+      [paginator]="true" 
+      [rows]="5" 
+      [rowsPerPageOptions]="[5, 10, 20]" 
+      styleClass="p-datatable-striped"
+      responsiveLayout="scroll">
+      
+      <!-- Table Header -->
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Recorded At</th>
+          <th>Body Temp (°C)</th>
+          <th>BP (Systolic/Diastolic)</th>
+          <th>Heart Rate (bpm)</th>
+          <th>Respiratory Rate</th>
+          <th>Oxygen Sat (%)</th>
+          <th>Observations</th>
+        </tr>
+      </ng-template>
+  
+      <!-- Table Body -->
+      <ng-template pTemplate="body" let-vital>
+        <tr>
+          <td>{{ vital.recordedAt }}</td>
+          <td>{{ vital.bodyTemperature }}</td>
+          <td>{{ vital.bloodPressureSystolic }}/{{ vital.bloodPressureDiastolic }}</td>
+          <td>{{ vital.heartRate }}</td>
+          <td>{{ vital.respiratoryRate }}</td>
+          <td>{{ vital.oxygenSaturation }}</td>
+          <td>{{ vital.additionalObservations }}</td>
+        </tr>
+      </ng-template>
+  
+      <!-- Empty Message -->
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="10">No vitals data available.</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </p-card>
+  
