--- a/src/app/modules/patient/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/modules/patient/patient-dashboard/patient-dashboard.component.html
@@ -1,3 +1,4 @@
+<app-dynamic-navbar></app-dynamic-navbar>
 <p-card header="Personal Information">
   <p-splitter [style]="{ height: '200px' }" styleClass="mb-8">
     <ng-template pTemplate>
