show message + spinner in various point of app

--- a/src/app/modules/access/password/password.component.html
+++ b/src/app/modules/access/password/password.component.html
@@ -1,8 +1,9 @@
+<p-toast />
 <div class="flex justify-content-center align-items-center min-h-screen surface-ground">
     <p-card styleClass="shadow-2 w-full md:w-8" [style]="{'min-width': '500px'}">
         <form [formGroup]="passwordForm" (ngSubmit)="!userId ? onChangePassword() : onChangePasswordToAnotherUser()"
               class="flex flex-column gap-4 p-4">
-           
+
             <div class="text-center mb-4">
                 <h1 class="text-2xl font-semibold text-900 m-0">Change Password</h1>
             </div>
