--- a/src/app/modules/admin/user/user-management/staff-user-management/staff-user-management.component.html
+++ b/src/app/modules/admin/user/user-management/staff-user-management/staff-user-management.component.html
@@ -1,4 +1,5 @@
 <app-spinner-loader [visible]="loading"></app-spinner-loader>
+<p-toast />
 <div class="surface-ground p-4">
     <p-card>
         <ng-template pTemplate="header">
