--- a/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
+++ b/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
@@ -1,4 +1,5 @@
 <app-spinner-loader [visible]="loading"></app-spinner-loader>
+<p-toast />
 <form [formGroup]="patientForm" (ngSubmit)="onSubmit()">
   <div class="flex flex-column gap-4 p-4" style="max-width: 700px; margin: auto;">
     <p-card>
