--- a/src/app/modules/shared/billing-invoice/billing-invoice.component.html
+++ b/src/app/modules/shared/billing-invoice/billing-invoice.component.html
@@ -1,5 +1,5 @@
 <app-dynamic-navbar [navItems]="navItems"></app-dynamic-navbar>
-
+<app-spinner-loader [visible]="loading"></app-spinner-loader>
 <p-card header="Patient Invoice">
   <div class="card">
     <p-table
