--- a/src/app/modules/secretary/triage/triage.component.html
+++ b/src/app/modules/secretary/triage/triage.component.html
@@ -1,3 +1,4 @@
+<app-spinner-loader [visible]="loading"></app-spinner-loader>
 <div class="flex flex-column gap-4 p-2" style="width: 700px">
   <p-card>
     <div class="flex flex-column gap-5">
