--- a/src/app/modules/shared/add-billing-invoice/add-billing-invoice.component.html
+++ b/src/app/modules/shared/add-billing-invoice/add-billing-invoice.component.html
@@ -1,3 +1,4 @@
+<app-spinner-loader [visible]="loading"></app-spinner-loader>
 <div class="flex flex-column gap-4 p-4">
     <p-card>
       <div class="flex flex-column gap-3">
