--- a/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
@@ -61,8 +61,8 @@
             <button
                 pButton
                 type="button"
-                label="Add Doctor"
-                icon="pi pi-plus"
+                label="View Doctor"
+                icon="pi pi-eye"
                 class="p-button-rounded mt-2"
                 style="
                     background-color: rgba(255, 255, 255, 0.2);
