admin dashboard css fix style

--- a/src/app/modules/access/password/password.component.html
+++ b/src/app/modules/access/password/password.component.html
@@ -34,6 +34,15 @@
                               [toggleMask]="true"
                               [style]="{'width':'100%'}"
                               inputStyleClass="w-full p-3">
+                              <ng-template pTemplate="footer">
+                                <ul>
+                                    <li>At least one lowercase</li>
+                                    <li>At least one uppercase</li>
+                                    <li>At least one numeric</li>
+                                    <li>At least special characters</li>
+                                    <li>Minimum 8 characters</li>
+                                </ul>
+                            </ng-template>
                     </p-password>
                     <label for="newPassword">New password</label>
                 </span>
@@ -65,7 +74,7 @@
             </div>
 
             <p-button type="submit"
-                      [disabled]="!passwordForm.valid || loading"
+                      [disabled]="!passwordForm.valid || loading || !passwordForm.get('repeatedPassword')?.dirty"
                       styleClass="w-full"
                       size="large"
                       severity="primary"
