--- a/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
@@ -10,7 +10,7 @@
             [style]="{
                 border: '1px solid #ccc',
                 borderRadius: '12px',
-                width: '200px',
+                width: '210px',
                 backgroundColor: '#083d77',
                 color: 'white',
                 textAlign: 'center',
@@ -25,8 +25,8 @@
             <button
                 pButton
                 type="button"
-                label="Add Admin"
-                icon="pi pi-plus"
+                label="View Admin"
+                icon="pi pi-eye"
                 class="p-button-rounded mt-2"
                 style="
                     background-color: rgba(255, 255, 255, 0.2);
@@ -46,7 +46,7 @@
             [style]="{
                 border: '1px solid #ccc',
                 borderRadius: '12px',
-                width: '200px',
+                width: '210px',
                 backgroundColor: 'red',
                 color: 'white',
                 textAlign: 'center',
@@ -82,7 +82,7 @@
             [style]="{
                 border: '1px solid #ccc',
                 borderRadius: '12px',
-                width: '200px',
+                width: '210px',
                 backgroundColor: 'brown',
                 color: 'white',
                 textAlign: 'center',
@@ -97,8 +97,8 @@
             <button
                 pButton
                 type="button"
-                label="Add Nurse"
-                icon="pi pi-plus"
+                label="View Nurse"
+                icon="pi pi-eye"
                 class="p-button-rounded mt-2"
                 style="
                     background-color: rgba(255, 255, 255, 0.2);
@@ -118,7 +118,7 @@
             [style]="{
                 border: '1px solid #ccc',
                 borderRadius: '12px',
-                width: '200px',
+                width: '210px',
                 backgroundColor: 'orange',
                 color: 'white',
                 textAlign: 'center',
@@ -133,8 +133,8 @@
             <button
                 pButton
                 type="button"
-                label="Add Secretary"
-                icon="pi pi-plus"
+                label="View Secretary"
+                icon="pi pi-eye"
                 class="p-button-rounded mt-2"
                 style="
                     background-color: rgba(255, 255, 255, 0.2);
@@ -154,7 +154,7 @@
             [style]="{
                 border: '1px solid #ccc',
                 borderRadius: '12px',
-                width: '200px',
+                width: '210px',
                 backgroundColor: 'green',
                 color: 'white',
                 textAlign: 'center',
@@ -169,8 +169,8 @@
             <button
                 pButton
                 type="button"
-                label="Add Patient"
-                icon="pi pi-plus"
+                label="View Patient"
+                icon="pi pi-eye"
                 class="p-button-rounded mt-2"
                 style="
                     background-color: rgba(255, 255, 255, 0.2);
