--- a/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
+++ b/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
@@ -14,7 +14,7 @@
             <input pInputText id="lastName" formControlName="lastName" autocomplete="off" />
             <label for="lastName">Last Name</label>
           </p-floatLabel>
-          <p-floatLabel class="w-full md:w-5">
+          <p-floatLabel class="w-full md:w-5 mr-2">
             <input pInputText id="email" formControlName="email" autocomplete="off" />
             <label for="email">Email</label>
           </p-floatLabel>
